[gd_scene load_steps=12 format=3 uid="uid://dwts4s3g7ggmq"]

[ext_resource type="Script" path="res://scripts/mountain/mountain_minigame.gd" id="1_tc88e"]
[ext_resource type="Script" path="res://scripts/mountain/player.gd" id="2_71350"]
[ext_resource type="Texture2D" uid="uid://3ttwa7rolvit" path="res://icon.svg" id="3_l33no"]
[ext_resource type="PackedScene" uid="uid://cdlspp44f5lmj" path="res://scenes/mountain/tree.tscn" id="4_kyf66"]
[ext_resource type="PackedScene" uid="uid://sast0fl25mk8" path="res://scenes/mountain/boulder.tscn" id="5_3uq8s"]
[ext_resource type="PackedScene" uid="uid://0pjhoi8tcmtu" path="res://scenes/mountain/bear.tscn" id="6_fuq4y"]
[ext_resource type="PackedScene" uid="uid://canwef3g62p43" path="res://scenes/mountain/avalanche.tscn" id="7_80j0t"]
[ext_resource type="PackedScene" uid="uid://dq3yj81r6my4o" path="res://scenes/mountain/coin.tscn" id="8_xtm7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mt0rb"]
size = Vector2(33, 79)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_slbmk"]
texture = ExtResource("3_l33no")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/modulate = Color(0.184314, 0.231373, 0.403922, 1)
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8btvx"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_slbmk")

[node name="MountainMinigame" type="Node2D"]
script = ExtResource("1_tc88e")
debug_mode = true

[node name="Player" type="Area2D" parent="." node_paths=PackedStringArray("minigame_node", "left_bound", "right_bound", "camera")]
position = Vector2(312, -300)
collision_layer = 0
collision_mask = 15
script = ExtResource("2_71350")
minigame_node = NodePath("..")
left_bound = NodePath("../PlayerCamera/LeftPlayerBound")
right_bound = NodePath("../PlayerCamera/RightPlayerBound")
camera = NodePath("../PlayerCamera")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.3, 0.7)
texture = ExtResource("3_l33no")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_mt0rb")

[node name="Timer" type="Timer" parent="Player"]
wait_time = 2.0
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
z_index = -5
tile_set = SubResource("TileSet_8btvx")
format = 2
layer_0/tile_data = PackedInt32Array(-131075, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, 655357, 0, 0, 720893, 0, 0, 786429, 0, 0, 851965, 0, 0, 917501, 0, 0, 983037, 0, 0, 1048573, 0, 0, 1114109, 0, 0, 1179645, 0, 0, 1245181, 0, 0, 1310717, 0, 0, 1376253, 0, 0, 1441789, 0, 0, 1507325, 0, 0, 1572861, 0, 0, 1638397, 0, 0, 1703933, 0, 0, 1769469, 0, 0, 1835005, 0, 0, 1900541, 0, 0, 1966077, 0, 0, 2031613, 0, 0, 2097149, 0, 0, 2162685, 0, 0, 2228221, 0, 0, 2293757, 0, 0, 2359293, 0, 0, 2424829, 0, 0, 2490365, 0, 0, 2555901, 0, 0, 2621437, 0, 0, 2686973, 0, 0, 2752509, 0, 0, 2818045, 0, 0, 2883581, 0, 0, 2949117, 0, 0, 3014653, 0, 0, 3080189, 0, 0, 3145725, 0, 0, 3211261, 0, 0, 3276797, 0, 0, 3342333, 0, 0, 3407869, 0, 0, 3473405, 0, 0, 3538941, 0, 0, 3604477, 0, 0, 3670013, 0, 0, 3735549, 0, 0, 3801085, 0, 0, 3866621, 0, 0, 3932157, 0, 0, 3997693, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 655358, 0, 0, 720894, 0, 0, 786430, 0, 0, 851966, 0, 0, 917502, 0, 0, 983038, 0, 0, 1048574, 0, 0, 1114110, 0, 0, 1179646, 0, 0, 1245182, 0, 0, 1310718, 0, 0, 1376254, 0, 0, 1441790, 0, 0, 1507326, 0, 0, 1572862, 0, 0, 1638398, 0, 0, 1703934, 0, 0, 1769470, 0, 0, 1835006, 0, 0, 1900542, 0, 0, 1966078, 0, 0, 2031614, 0, 0, 2097150, 0, 0, 2162686, 0, 0, 2228222, 0, 0, 2293758, 0, 0, 2359294, 0, 0, 2424830, 0, 0, 2490366, 0, 0, 2555902, 0, 0, 2621438, 0, 0, 2686974, 0, 0, 2752510, 0, 0, 2818046, 0, 0, 2883582, 0, 0, 2949118, 0, 0, 3014654, 0, 0, 3080190, 0, 0, 3145726, 0, 0, 3211262, 0, 0, 3276798, 0, 0, 3342334, 0, 0, 3407870, 0, 0, 3473406, 0, 0, 3538942, 0, 0, 3604478, 0, 0, 3670014, 0, 0, 3735550, 0, 0, 3801086, 0, 0, 3866622, 0, 0, 3932158, 0, 0, 3997694, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 851967, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1179647, 0, 0, 1245183, 0, 0, 1310719, 0, 0, 1376255, 0, 0, 1441791, 0, 0, 1507327, 0, 0, 1572863, 0, 0, 1638399, 0, 0, 1703935, 0, 0, 1769471, 0, 0, 1835007, 0, 0, 1900543, 0, 0, 1966079, 0, 0, 2031615, 0, 0, 2097151, 0, 0, 2162687, 0, 0, 2228223, 0, 0, 2293759, 0, 0, 2359295, 0, 0, 2424831, 0, 0, 2490367, 0, 0, 2555903, 0, 0, 2621439, 0, 0, 2686975, 0, 0, 2752511, 0, 0, 2818047, 0, 0, 2883583, 0, 0, 2949119, 0, 0, 3014655, 0, 0, 3080191, 0, 0, 3145727, 0, 0, 3211263, 0, 0, 3276799, 0, 0, 3342335, 0, 0, 3407871, 0, 0, 3473407, 0, 0, 3538943, 0, 0, 3604479, 0, 0, 3670015, 0, 0, 3735551, 0, 0, 3801087, 0, 0, 3866623, 0, 0, 3932159, 0, 0, 3997695, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1376256, 0, 0, 1441792, 0, 0, 1507328, 0, 0, 1572864, 0, 0, 1638400, 0, 0, 1703936, 0, 0, 1769472, 0, 0, 1835008, 0, 0, 1900544, 0, 0, 1966080, 0, 0, 2031616, 0, 0, 2097152, 0, 0, 2162688, 0, 0, 2228224, 0, 0, 2293760, 0, 0, 2359296, 0, 0, 2424832, 0, 0, 2490368, 0, 0, 2555904, 0, 0, 2621440, 0, 0, 2686976, 0, 0, 2752512, 0, 0, 2818048, 0, 0, 2883584, 0, 0, 2949120, 0, 0, 3014656, 0, 0, 3080192, 0, 0, 3145728, 0, 0, 3211264, 0, 0, 3276800, 0, 0, 3342336, 0, 0, 3407872, 0, 0, 3473408, 0, 0, 3538944, 0, 0, 3604480, 0, 0, 3670016, 0, 0, 3735552, 0, 0, 3801088, 0, 0, 3866624, 0, 0, 3932160, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 1376257, 0, 0, 1441793, 0, 0, 1507329, 0, 0, 1572865, 0, 0, 1638401, 0, 0, 1703937, 0, 0, 1769473, 0, 0, 1835009, 0, 0, 1900545, 0, 0, 1966081, 0, 0, 2031617, 0, 0, 2097153, 0, 0, 2162689, 0, 0, 2228225, 0, 0, 2293761, 0, 0, 2359297, 0, 0, 2424833, 0, 0, 2490369, 0, 0, 2555905, 0, 0, 2621441, 0, 0, 2686977, 0, 0, 2752513, 0, 0, 2818049, 0, 0, 2883585, 0, 0, 2949121, 0, 0, 3014657, 0, 0, 3080193, 0, 0, 3145729, 0, 0, 3211265, 0, 0, 3276801, 0, 0, 3342337, 0, 0, 3407873, 0, 0, 3473409, 0, 0, 3538945, 0, 0, 3604481, 0, 0, 3670017, 0, 0, 3735553, 0, 0, 3801089, 0, 0, 3866625, 0, 0, 3932161, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 0, 0, 1114114, 0, 0, 1179650, 0, 0, 1245186, 0, 0, 1310722, 0, 0, 1376258, 0, 0, 1441794, 0, 0, 1507330, 0, 0, 1572866, 0, 0, 1638402, 0, 0, 1703938, 0, 0, 1769474, 0, 0, 1835010, 0, 0, 1900546, 0, 0, 1966082, 0, 0, 2031618, 0, 0, 2097154, 0, 0, 2162690, 0, 0, 2228226, 0, 0, 2293762, 0, 0, 2359298, 0, 0, 2424834, 0, 0, 2490370, 0, 0, 2555906, 0, 0, 2621442, 0, 0, 2686978, 0, 0, 2752514, 0, 0, 2818050, 0, 0, 2883586, 0, 0, 2949122, 0, 0, 3014658, 0, 0, 3080194, 0, 0, 3145730, 0, 0, 3211266, 0, 0, 3276802, 0, 0, 3342338, 0, 0, 3407874, 0, 0, 3473410, 0, 0, 3538946, 0, 0, 3604482, 0, 0, 3670018, 0, 0, 3735554, 0, 0, 3801090, 0, 0, 3866626, 0, 0, 3932162, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, 1179651, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 1376259, 0, 0, 1441795, 0, 0, 1507331, 0, 0, 1572867, 0, 0, 1638403, 0, 0, 1703939, 0, 0, 1769475, 0, 0, 1835011, 0, 0, 1900547, 0, 0, 1966083, 0, 0, 2031619, 0, 0, 2097155, 0, 0, 2162691, 0, 0, 2228227, 0, 0, 2293763, 0, 0, 2359299, 0, 0, 2424835, 0, 0, 2490371, 0, 0, 2555907, 0, 0, 2621443, 0, 0, 2686979, 0, 0, 2752515, 0, 0, 2818051, 0, 0, 2883587, 0, 0, 2949123, 0, 0, 3014659, 0, 0, 3080195, 0, 0, 3145731, 0, 0, 3211267, 0, 0, 3276803, 0, 0, 3342339, 0, 0, 3407875, 0, 0, 3473411, 0, 0, 3538947, 0, 0, 3604483, 0, 0, 3670019, 0, 0, 3735555, 0, 0, 3801091, 0, 0, 3866627, 0, 0, 3932163, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 983044, 0, 0, 1048580, 0, 0, 1114116, 0, 0, 1179652, 0, 0, 1245188, 0, 0, 1310724, 0, 0, 1376260, 0, 0, 1441796, 0, 0, 1507332, 0, 0, 1572868, 0, 0, 1638404, 0, 0, 1703940, 0, 0, 1769476, 0, 0, 1835012, 0, 0, 1900548, 0, 0, 1966084, 0, 0, 2031620, 0, 0, 2097156, 0, 0, 2162692, 0, 0, 2228228, 0, 0, 2293764, 0, 0, 2359300, 0, 0, 2424836, 0, 0, 2490372, 0, 0, 2555908, 0, 0, 2621444, 0, 0, 2686980, 0, 0, 2752516, 0, 0, 2818052, 0, 0, 2883588, 0, 0, 2949124, 0, 0, 3014660, 0, 0, 3080196, 0, 0, 3145732, 0, 0, 3211268, 0, 0, 3276804, 0, 0, 3342340, 0, 0, 3407876, 0, 0, 3473412, 0, 0, 3538948, 0, 0, 3604484, 0, 0, 3670020, 0, 0, 3735556, 0, 0, 3801092, 0, 0, 3866628, 0, 0, 3932164, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 0, 851973, 0, 0, 917509, 0, 0, 983045, 0, 0, 1048581, 0, 0, 1114117, 0, 0, 1179653, 0, 0, 1245189, 0, 0, 1310725, 0, 0, 1376261, 0, 0, 1441797, 0, 0, 1507333, 0, 0, 1572869, 0, 0, 1638405, 0, 0, 1703941, 0, 0, 1769477, 0, 0, 1835013, 0, 0, 1900549, 0, 0, 1966085, 0, 0, 2031621, 0, 0, 2097157, 0, 0, 2162693, 0, 0, 2228229, 0, 0, 2293765, 0, 0, 2359301, 0, 0, 2424837, 0, 0, 2490373, 0, 0, 2555909, 0, 0, 2621445, 0, 0, 2686981, 0, 0, 2752517, 0, 0, 2818053, 0, 0, 2883589, 0, 0, 2949125, 0, 0, 3014661, 0, 0, 3080197, 0, 0, 3145733, 0, 0, 3211269, 0, 0, 3276805, 0, 0, 3342341, 0, 0, 3407877, 0, 0, 3473413, 0, 0, 3538949, 0, 0, 3604485, 0, 0, 3670021, 0, 0, 3735557, 0, 0, 3801093, 0, 0, 3866629, 0, 0, 3932165, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 1048582, 0, 0, 1114118, 0, 0, 1179654, 0, 0, 1245190, 0, 0, 1310726, 0, 0, 1376262, 0, 0, 1441798, 0, 0, 1507334, 0, 0, 1572870, 0, 0, 1638406, 0, 0, 1703942, 0, 0, 1769478, 0, 0, 1835014, 0, 0, 1900550, 0, 0, 1966086, 0, 0, 2031622, 0, 0, 2097158, 0, 0, 2162694, 0, 0, 2228230, 0, 0, 2293766, 0, 0, 2359302, 0, 0, 2424838, 0, 0, 2490374, 0, 0, 2555910, 0, 0, 2621446, 0, 0, 2686982, 0, 0, 2752518, 0, 0, 2818054, 0, 0, 2883590, 0, 0, 2949126, 0, 0, 3014662, 0, 0, 3080198, 0, 0, 3145734, 0, 0, 3211270, 0, 0, 3276806, 0, 0, 3342342, 0, 0, 3407878, 0, 0, 3473414, 0, 0, 3538950, 0, 0, 3604486, 0, 0, 3670022, 0, 0, 3735558, 0, 0, 3801094, 0, 0, 3866630, 0, 0, 3932166, 0, 0, -196601, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 1048583, 0, 0, 1114119, 0, 0, 1179655, 0, 0, 1245191, 0, 0, 1310727, 0, 0, 1376263, 0, 0, 1441799, 0, 0, 1507335, 0, 0, 1572871, 0, 0, 1638407, 0, 0, 1703943, 0, 0, 1769479, 0, 0, 1835015, 0, 0, 1900551, 0, 0, 1966087, 0, 0, 2031623, 0, 0, 2097159, 0, 0, 2162695, 0, 0, 2228231, 0, 0, 2293767, 0, 0, 2359303, 0, 0, 2424839, 0, 0, 2490375, 0, 0, 2555911, 0, 0, 2621447, 0, 0, 2686983, 0, 0, 2752519, 0, 0, 2818055, 0, 0, 2883591, 0, 0, 2949127, 0, 0, 3014663, 0, 0, 3080199, 0, 0, 3145735, 0, 0, 3211271, 0, 0, 3276807, 0, 0, 3342343, 0, 0, 3407879, 0, 0, 3473415, 0, 0, 3538951, 0, 0, 3604487, 0, 0, 3670023, 0, 0, 3735559, 0, 0, 3801095, 0, 0, 3866631, 0, 0, 3932167, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 1048584, 0, 0, 1114120, 0, 0, 1179656, 0, 0, 1245192, 0, 0, 1310728, 0, 0, 1376264, 0, 0, 1441800, 0, 0, 1507336, 0, 0, 1572872, 0, 0, 1638408, 0, 0, 1703944, 0, 0, 1769480, 0, 0, 1835016, 0, 0, 1900552, 0, 0, 1966088, 0, 0, 2031624, 0, 0, 2097160, 0, 0, 2162696, 0, 0, 2228232, 0, 0, 2293768, 0, 0, 2359304, 0, 0, 2424840, 0, 0, 2490376, 0, 0, 2555912, 0, 0, 2621448, 0, 0, 2686984, 0, 0, 2752520, 0, 0, 2818056, 0, 0, 2883592, 0, 0, 2949128, 0, 0, 3014664, 0, 0, 3080200, 0, 0, 3145736, 0, 0, 3211272, 0, 0, 3276808, 0, 0, 3342344, 0, 0, 3407880, 0, 0, 3473416, 0, 0, 3538952, 0, 0, 3604488, 0, 0, 3670024, 0, 0, 3735560, 0, 0, 3801096, 0, 0, 3866632, 0, 0, 3932168, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 0, 0, 1048585, 0, 0, 1114121, 0, 0, 1179657, 0, 0, 1245193, 0, 0, 1310729, 0, 0, 1376265, 0, 0, 1441801, 0, 0, 1507337, 0, 0, 1572873, 0, 0, 1638409, 0, 0, 1703945, 0, 0, 1769481, 0, 0, 1835017, 0, 0, 1900553, 0, 0, 1966089, 0, 0, 2031625, 0, 0, 2097161, 0, 0, 2162697, 0, 0, 2228233, 0, 0, 2293769, 0, 0, 2359305, 0, 0, 2424841, 0, 0, 2490377, 0, 0, 2555913, 0, 0, 2621449, 0, 0, 2686985, 0, 0, 2752521, 0, 0, 2818057, 0, 0, 2883593, 0, 0, 2949129, 0, 0, 3014665, 0, 0, 3080201, 0, 0, 3145737, 0, 0, 3211273, 0, 0, 3276809, 0, 0, 3342345, 0, 0, 3407881, 0, 0, 3473417, 0, 0, 3538953, 0, 0, 3604489, 0, 0, 3670025, 0, 0, 3735561, 0, 0, 3801097, 0, 0, 3866633, 0, 0, 3932169, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 917514, 0, 0, 983050, 0, 0, 1048586, 0, 0, 1114122, 0, 0, 1179658, 0, 0, 1245194, 0, 0, 1310730, 0, 0, 1376266, 0, 0, 1441802, 0, 0, 1507338, 0, 0, 1572874, 0, 0, 1638410, 0, 0, 1703946, 0, 0, 1769482, 0, 0, 1835018, 0, 0, 1900554, 0, 0, 1966090, 0, 0, 2031626, 0, 0, 2097162, 0, 0, 2162698, 0, 0, 2228234, 0, 0, 2293770, 0, 0, 2359306, 0, 0, 2424842, 0, 0, 2490378, 0, 0, 2555914, 0, 0, 2621450, 0, 0, 2686986, 0, 0, 2752522, 0, 0, 2818058, 0, 0, 2883594, 0, 0, 2949130, 0, 0, 3014666, 0, 0, 3080202, 0, 0, 3145738, 0, 0, 3211274, 0, 0, 3276810, 0, 0, 3342346, 0, 0, 3407882, 0, 0, 3473418, 0, 0, 3538954, 0, 0, 3604490, 0, 0, 3670026, 0, 0, 3735562, 0, 0, 3801098, 0, 0, 3866634, 0, 0, 3932170, 0, 0, -196597, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 917515, 0, 0, 983051, 0, 0, 1048587, 0, 0, 1114123, 0, 0, 1179659, 0, 0, 1245195, 0, 0, 1310731, 0, 0, 1376267, 0, 0, 1441803, 0, 0, 1507339, 0, 0, 1572875, 0, 0, 1638411, 0, 0, 1703947, 0, 0, 1769483, 0, 0, 1835019, 0, 0, 1900555, 0, 0, 1966091, 0, 0, 2031627, 0, 0, 2097163, 0, 0, 2162699, 0, 0, 2228235, 0, 0, 2293771, 0, 0, 2359307, 0, 0, 2424843, 0, 0, 2490379, 0, 0, 2555915, 0, 0, 2621451, 0, 0, 2686987, 0, 0, 2752523, 0, 0, 2818059, 0, 0, 2883595, 0, 0, 2949131, 0, 0, 3014667, 0, 0, 3080203, 0, 0, 3145739, 0, 0, 3211275, 0, 0, 3276811, 0, 0, 3342347, 0, 0, 3407883, 0, 0, 3473419, 0, 0, 3538955, 0, 0, 3604491, 0, 0, 3670027, 0, 0, 3735563, 0, 0, 3801099, 0, 0, 3866635, 0, 0, 3932171, 0, 0, -196596, 0, 0, -131060, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 1114124, 0, 0, 1179660, 0, 0, 1245196, 0, 0, 1310732, 0, 0, 1376268, 0, 0, 1441804, 0, 0, 1507340, 0, 0, 1572876, 0, 0, 1638412, 0, 0, 1703948, 0, 0, 1769484, 0, 0, 1835020, 0, 0, 1900556, 0, 0, 1966092, 0, 0, 2031628, 0, 0, 2097164, 0, 0, 2162700, 0, 0, 2228236, 0, 0, 2293772, 0, 0, 2359308, 0, 0, 2424844, 0, 0, 2490380, 0, 0, 2555916, 0, 0, 2621452, 0, 0, 2686988, 0, 0, 2752524, 0, 0, 2818060, 0, 0, 2883596, 0, 0, 2949132, 0, 0, 3014668, 0, 0, 3080204, 0, 0, 3145740, 0, 0, 3211276, 0, 0, 3276812, 0, 0, 3342348, 0, 0, 3407884, 0, 0, 3473420, 0, 0, 3538956, 0, 0, 3604492, 0, 0, 3670028, 0, 0, 3735564, 0, 0, 3801100, 0, 0, 3866636, 0, 0, 3932172, 0, 0)

[node name="Trees" type="Node2D" parent="."]

[node name="Tree1" parent="Trees" instance=ExtResource("4_kyf66")]
position = Vector2(148, 1264)

[node name="Tree2" parent="Trees" instance=ExtResource("4_kyf66")]
position = Vector2(315, 2269)

[node name="Boulders" type="Node2D" parent="."]

[node name="Boulder1" parent="Boulders" instance=ExtResource("5_3uq8s")]
position = Vector2(691, 2120)

[node name="Boulder2" parent="Boulders" instance=ExtResource("5_3uq8s")]
position = Vector2(648, 2476)

[node name="Bears" type="Node2D" parent="."]

[node name="Bear1" parent="Bears" instance=ExtResource("6_fuq4y")]
position = Vector2(-189, 2765)

[node name="Avalanches" type="Node2D" parent="."]
position = Vector2(-156, -139)

[node name="Avalanche1" parent="Avalanches" instance=ExtResource("7_80j0t")]
position = Vector2(-325, 1485)
gravity_scale = 0.0

[node name="Coins" type="Node2D" parent="."]

[node name="Coin1" parent="Coins" instance=ExtResource("8_xtm7i")]
position = Vector2(623, 893)

[node name="Coin2" parent="Coins" instance=ExtResource("8_xtm7i")]
position = Vector2(-12, 1881)

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2(324, 151)

[node name="LeftPlayerBound" type="Marker2D" parent="PlayerCamera"]
position = Vector2(-480, -260)

[node name="RightPlayerBound" type="Marker2D" parent="PlayerCamera"]
position = Vector2(480, -260)

[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="player_lost" from="Player" to="." method="_on_player_lost"]
[connection signal="player_won" from="Player" to="." method="_on_player_won"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_timer_timeout"]
